fixed bug - fill the gap between reaction-box and its triggering like-btn

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,71 @@
+html, body {
+  padding: 20px;
+  font-family: sans-serif;
+}
 
+.feed {
+  width: 500px;
+  height: 473px;
+  background-image: url(http://i.imgur.com/HckmGbj.png);
+  position: relative;
+}
+.feed .like-btn {
+  width: 44px;
+  height: 25px;
+  background: #D0D0D0;
+  position: absolute;
+  bottom: 13px;
+  left: 13px;
+  cursor: pointer;
+}
+.feed .like-btn:hover {
+  background: #718C00;
+}
+.feed .like-btn:hover .reaction-box {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.feed .like-btn::before {
+  content: "";
+  display: block;
+  background: seagreen;
+  height: 10px;
+  width: 44px;
+  position: absolute;
+  top: -10px;
+  left: 0;
+}
+.feed .like-btn .reaction-box {
+  width: 312px;
+  height: 55px;
+  background: #F0C674;
+  border-radius: 28px;
+  position: absolute;
+  bottom: 35px;
+  left: -25px;
+  display: none;
+}
+.feed .like-btn .reaction-box .reaction-icon {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background: #8959A8;
+  border-radius: 20px;
+  text-align: center;
+  transition-property: all;
+  transition: 1s;
+}
+.feed .like-btn .reaction-box .reaction-icon label {
+  color: #fff;
+  background: #333;
+  position: relative;
+  font-size: 11px;
+  top: -24px;
+}
+.feed .like-btn .reaction-box .reaction-icon:hover {
+  transform: scale(1.4);
+  transform-origin: bottom;
+}
 
 /*# sourceMappingURL=style.css.map */
